--- a/hire.html
+++ b/hire.html
@@ -17,7 +17,7 @@
                 <img src="behance logo.webp" alt="logo" class="img-fluid" id="behance-img">
            <ul class="nav flex-column flex-sm-row">
   <li class="nav-item">
-    <a class="nav-link" href="#" id="Explore">Explore</a>
+    <a class="nav-link" href="#" id="index.html">Explore</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="jobs.html">Find Jobs</a>
