--- a/jobs.html
+++ b/jobs.html
@@ -26,7 +26,7 @@
 </label>
            <ul class="nav flex-column flex-sm-row"> 
   <li class="nav-item">
-    <a class="nav-link" href="#" id="Explore">Explore</a>
+    <a class="nav-link" href="#" id="index.html">Explore</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="jobs.html">Find Jobs</a>
