--- a/career.html
+++ b/career.html
@@ -18,7 +18,7 @@
                 <img src="behance logo.webp" alt="logo" class="img-fluid" id="behance-img">
            <ul class="nav flex-column flex-sm-row">
   <li class="nav-item">
-    <a class="nav-link" href="index.html" id="Explore">Explore</a>
+    <a class="nav-link" href="index.html">Explore</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="jobs.html">Find Jobs</a>
